--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,57 @@
+
 services:
+  # Servicio 1: Facturación
   facturacion-api:
     build:
       context: .
       dockerfile: Dockerfile
+    image: agentes-api:latest  # ← Nombre de la imagen compartida
     container_name: agente-facturacion-api
+    command: uvicorn facturacion_server:app --host 0.0.0.0 --port 8000
     ports:
       - "8000:8000"
     env_file:
       - .env
+    environment:
+      - SERVICE_NAME=facturacion-api
     networks:
       - chatbot_network
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 5s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
+  # Servicio 2: Performance
+  performance-api:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: agentes-api:latest  # ← Usa la MISMA imagen
+    container_name: agente-performance-api
+    command: uvicorn performance_server:app --host 0.0.0.0 --port 8004
+    ports:
+      - "8004:8004"
+    env_file:
+      - .env
+    environment:
+      - SERVICE_NAME=performance-api
+    networks:
+      - chatbot_network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8004/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 5s
     logging:
       driver: "json-file"
       options:
